force-app/main/default/objects/Training__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laravel</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>