force-app/main/default/objects/Training__c/fields/Training_ID__c.field-meta.xml
<CustomField>
    <fullName>Training_ID__c</fullName>
    <label>Training ID</label>
    <type>AutoNumber</type>
</CustomField>